--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "fact-website-registration",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "vitest",
-    "test:ui": "vitest --ui"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.5",
-    "@mui/x-charts": "^7.21.0",
-    "@tanstack/react-query": "^5.59.15",
-    "@uidotdev/usehooks": "^2.4.1",
-    "jspdf": "^2.5.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.3.2",
-    "@vitest/ui": "2.1.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "jest-mock": "^29.7.0",
-    "jsdom": "^25.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "vitest": "^2.1.3"
-  }
+    "name": "fact-website-registration",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "vitest",
+        "test:ui": "vitest --ui"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^6.1.5",
+        "@mui/x-charts": "^7.21.0",
+        "@tanstack/react-query": "^5.59.15",
+        "@uidotdev/usehooks": "^2.4.1",
+        "jspdf": "^2.5.2",
+        "micromatch": "4.0.8",
+        "next": "14.2.10",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-icons": "^5.2.1"
+    },
+    "devDependencies": {
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.5.0",
+        "@testing-library/react": "^16.0.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@vitejs/plugin-react": "^4.3.2",
+        "@vitest/ui": "2.1.3",
+        "depcheck": "^1.4.7",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
+        "jest-mock": "^29.7.0",
+        "jsdom": "^25.0.1",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5",
+        "vitest": "^2.1.3"
+    }
 }
