--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "next": "14.2.10",
         "react": "^18",
         "react-dom": "^18",
-        "react-icons": "^5.2.1"
+        "react-icons": "^5.2.1",
+        "universal-cookie": "^7.2.2"
     },
     "devDependencies": {
         "@testing-library/dom": "^10.4.0",
